# Primary_controller_ELNC_6012_project

client/: CMakeLists.txt  sdkconfig  sdkconfig.old
client/main/: CMakeLists.txt  lcd20x4_driver.c  lcd20x4_driver.h  tcp_client_main.c  tcp_client_v4.c
